# yunai

./: .gitignore  .prettierignore  .prettierrc  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml
account/: admin.py  models.py
account/migrations/: 0001_initial.py
core/templates/: home.html
templates/: base.html
transcription/: admin.py  forms.py  models.py  urls.py  views.py
transcription/migrations/: 0001_initial.py
transcription/templates/transcription/: transcription_confirm_delete.html  transcription_form.html  transcription_list.html
yunai/: asgi.py  settings.py  urls.py  wsgi.py
